--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@microsoft/signalr": "^8.0.0",
+    "@zxing/ngx-scanner": "^18.0.0",
+    "angularx-qrcode": "^17.0.1",
     "express": "^4.18.2",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
+    "ngx-qrcode2": "^9.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
