--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@auth0/angular-jwt": "^5.2.0",
     "@microsoft/signalr": "^8.0.0",
     "@zxing/ngx-scanner": "^18.0.0",
+    "angular-oauth2-oidc": "^17.0.2",
     "angularx-qrcode": "^17.0.1",
     "express": "^4.18.2",
     "gapi-script": "^1.2.0",
