--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@zxing/ngx-scanner": "^18.0.0",
     "angular-oauth2-oidc": "^17.0.2",
     "angularx-qrcode": "^17.0.1",
+    "chart.js": "^4.4.3",
     "express": "^4.18.2",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
